@@ -4,6 +4,7 @@
 	* src/Editors/_EditRepoRef.py: Add backreference tab
 
 2006-04-21  Alex Roitman  <shura@gramps-project.org>
+	* src/RelLib/_GrampsType.py (set_from_xml_str): Remove extra def.
 	* src/PluginUtils/_PluginStatus.py: Many small fixes.
 	* src/ManagedWindow.py (GrampsWindowManager.display_menu_list):
 	Fix building the menu for child-less windows.
